tests/semantic/valid/10_if_else_chain.tc
int main(void) {
    int x = 10;
    if (x > 15) {
        return 1;
    } else if (x > 5) {
        return 2;
    } else {
        return 3;
    }
}
